--- a/model.Rmd
+++ b/model.Rmd
@@ -16,6 +16,7 @@ close <- data$Adj.Close
 close_tail = tail(close, 300)
 plot.ts(close_tail)
 log_data = log(close_tail)
+log_data = log(log_data)
 plot.ts(log_data)
 ```
 
@@ -29,7 +30,25 @@ plot.ts(res)
 diff = diff(res, lag=5)
 second_diff = diff(diff, lag = 1)
 plot.ts(second_diff)
+acf(second_diff)
+pacf(second_diff)
 ```
 
 ## try2: polynomial model + differencing
+```{r}
+fit <-lm(log_data ~ poly(t, 3, raw=TRUE))
+res <- resid(fit)
+plot.ts(res)
+diff = diff(res, lag=5)
+second_diff = diff(diff, lag = 5)
+plot.ts(second_diff)
+acf(second_diff)
+pacf(second_diff)
+```
 
+
+## observe there's a bump on lag = 5 on both acf and pacf
+```{r}
+library(astsa)
+model1 <- sarima(log_data, p=0, d=1, q=0, P=0, D=1, Q=1, S=5)
+```
