--- a/model.Rmd
+++ b/model.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "zoey_model"
+title: "Stats 153 Project - Zoey"
 output: html_document
 ---
 
@@ -7,7 +7,11 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Exploration on data
+### 2. Exploratory Data Analysis
+
+Here we explore the data. Naturally, the first plot you should make is the data itself. Point out any visible features, e.g. heteroscedasticity, seasonality, trend.
+To observe the recent pattern better, we only use the last 300 data points from the time series. Each data point represents daily closure price for TSLA stock. 
+
 ```{r}
 t = 1:300
 data <- read.csv("data/TSLA.csv")
@@ -20,7 +24,11 @@ log_data = log(log_data)
 plot.ts(log_data)
 ```
 
-## try1: linear model + differencing
+### 3. Models considered
+
+I tried different parametric models with combination of differencing to pursue stationary. 
+
+#### Signal model 1: linear model + differencing
 linear mode, differencing with lag=5, second order differencing with lag 1
 
 ```{r}
@@ -34,9 +42,9 @@ acf(second_diff)
 pacf(second_diff)
 ```
 
-## try2: polynomial model + differencing
+#### Signal model 2: polynomial model + differencing
 ```{r}
-fit <-lm(log_data ~ poly(t, 3, raw=TRUE))
+fit <-lm(log_data ~ poly(t, 10, raw=TRUE))
 res <- resid(fit)
 plot.ts(res)
 diff = diff(res, lag=5)
@@ -52,3 +60,7 @@ pacf(second_diff)
 library(astsa)
 model1 <- sarima(log_data, p=0, d=1, q=0, P=0, D=1, Q=1, S=5)
 ```
+
+
+### 4. Model Comparison and Selection
+
